--- a/tut_7/comp435p_tut_7.tex
+++ b/tut_7/comp435p_tut_7.tex
@@ -117,7 +117,7 @@ commentstyle=\color{comments}\emph}
 			\item This technique has attracted considerable interest.
 			\item Uses distinctive features of the human face in order to verify or identify individuals
 			\item Accuracy \ldots.
-            \item Still image or video sequence; color or grayscale; thermogram / near infrared / 3D.
+            \item Still image or video sequence; color or gray scale; thermo gram / near infrared / 3D.
             \item Capturing a face image \ldots
 			\item Facial Features: \ldots
 			\item Face Recognition System Structure: Detection, location, and Matching with Reference \ldots
@@ -134,9 +134,9 @@ commentstyle=\color{comments}\emph}
 	\onslide<1>
 	\emph{Please point out some problems of face recognition. Can you give their solutions? (P8:11-16)}
 	\onslide<2> \inpdfc{8}{11}
-	Above are the typical problems
+	The typical problems
 	\onslide<3> \inpdfc{8}{12}
-	Data flow sequence.
+	The typical problems
 	\onslide<4> \inpdfc{8}{13}
 	Intra-class problems.
 	\onslide<5> \inpdfc{8}{14}
@@ -180,7 +180,7 @@ commentstyle=\color{comments}\emph}
 					\item Color information
 					\item Movement Information
 					\item Symmetry Information	\\
-				\alert{The grammar is provided by human experts. The performance of these methods greately depends on the knowledge of human experts.}
+				\alert{The grammar is provided by human experts. The performance of these methods greatly depends on the knowledge of human experts.}
 				\end{enumerate}
 		\end{itemize}		
 	\qed		
@@ -223,61 +223,61 @@ commentstyle=\color{comments}\emph}
 		
 \subsection{Problem 2: Eigenfaces algorithm}
 
-		\begin{frame}[t]{\subsecname}
-			\begin{overprint}
-			\onslide<1>
-			\emph{Understand the eigenfaces algorithm (P8:26-29) and eigenfaces recognition algorithm (P8:30-31).}
-				\onslide<2> \inpdfc{8}{26}
-				\onslide<3> \inpdfc{8}{27}
-				\onslide<4> \inpdfc{8}{28}
-				\onslide<5> \inpdfc{8}{29}
-				\onslide<6> \inpdfc{8}{30}
-				\onslide<7> \inpdfc{8}{31} 
-				\onslide<8>  
-				\begin{itemize}
-					\item Eigenfaces algorithm   				
-					\begin{enumerate}
-							\item Initialization: Acquire and align an initial set of face images
-							\item Compute: the average face image, the difference image for each image in the training set, the covariance matrix of this set of difference images, the eigenvectors of the covariance matrix
-							\item Calculate: the corresponding distribution in k-dimensional weight space for each known individual by projecting their face images onto the ``face space.''
-						\end{enumerate}
-				\end{itemize}
-				\onslide<9>  
-				\begin{itemize}
-						\item Eigenfaces recognition algorithm			
-					\begin{enumerate}
-							\item Calculate: a set of weights based on the input image and the M eigenfaces by projecting the input image onto each of the eigenfaces.
-							\item Determine: if the image is a face at all by checking to see if the image is sufficiently close to ``face space.''
-							\item Classify: If it is a face, classify the weight pattern as either a known person or as unknown.
-						\end{enumerate}
-				\end{itemize}\qed
-			\end{overprint}
-		\end{frame}
+\begin{frame}[t]{\subsecname}
+	\begin{overprint}
+	\onslide<1>
+	\emph{Understand the eigenfaces algorithm (P8:26-29) and eigenfaces recognition algorithm (P8:30-31).}
+		\onslide<2> \inpdfc{8}{26}
+		\onslide<3> \inpdfc{8}{27}
+		\onslide<4> \inpdfc{8}{28}
+		\onslide<5> \inpdfc{8}{29}
+		\onslide<6> \inpdfc{8}{30}
+		\onslide<7> \inpdfc{8}{31} 
+		\onslide<8>  
+		\begin{itemize}
+			\item Eigenfaces algorithm   				
+			\begin{enumerate}
+					\item Initialization: Acquire and align an initial set of face images
+					\item Compute: the average face image, the difference image for each image in the training set, the covariance matrix of this set of difference images, the eigenvectors of the covariance matrix
+					\item Calculate: the corresponding distribution in k-dimensional weight space for each known individual by projecting their face images onto the ``face space.''
+				\end{enumerate}
+		\end{itemize}
+		\onslide<9>  
+		\begin{itemize}
+				\item Eigenfaces recognition algorithm			
+			\begin{enumerate}
+					\item Calculate: a set of weights based on the input image and the M eigenfaces by projecting the input image onto each of the eigenfaces.
+					\item Determine: if the image is a face at all by checking to see if the image is sufficiently close to ``face space.''
+					\item Classify: If it is a face, classify the weight pattern as either a known person or as unknown.
+				\end{enumerate}
+		\end{itemize}\qed
+	\end{overprint}
+\end{frame}
 		
 \subsection{Problem 3: Evaluation of the eigenfaces algorithm}
 
-		\begin{frame}[t]{\subsecname}
-			\begin{overprint}
-			\onslide<1>
-			\emph{Eigenfaces is PCA-based method which is introduced in Lecture 5. At the fifth step of PCA method (P5:23-24) the k most principal components are selected based on the ratio ($\gamma_{\lambda}$) of the eigenvalue sum of selected components to the total sum. Please decide the value of k when the threshold of $\gamma_{\lambda}$ is 95\%. In P8:31 there is a training set including 27 facial images to get eigenfaces. Can you give the value of k according to the training result (eigenfaces)?}
-				\onslide<2> \inpdfu{5}{12} %P5-23
-				\onslide<3> \inpdfl{5}{12} %P5-24
-				The $\gamma_{\lambda}$ of the first seven $\lambda$ is over 95\%.
-				\onslide<4> \inpdfc{8}{31} %P8-31
-				\small{The first nine principal components are of the most information.}\qed
-			\end{overprint}
-		\end{frame}
+\begin{frame}[t]{\subsecname}
+	\begin{overprint}
+	\onslide<1>
+	\emph{Eigenfaces is PCA-based method which is introduced in Lecture 5. At the fifth step of PCA method (P5:23-24) the k most principal components are selected based on the ratio ($\gamma_{\lambda}$) of the eigenvalue sum of selected components to the total sum. Please decide the value of k when the threshold of $\gamma_{\lambda}$ is 95\%. In P8:31 there is a training set including 27 facial images to get eigenfaces. Can you give the value of k according to the training result (eigenfaces)?}
+		\onslide<2> \inpdfu{5}{12} %P5-23
+		\onslide<3> \inpdfl{5}{12} %P5-24
+		The $\gamma_{\lambda}$ of the first \alert{seven} $\lambda$ is over 95\%.
+		\onslide<4> \inpdfc{8}{31} %P8-31
+		\small{The first \alert{nine} principal components are of the most information.}\qed
+	\end{overprint}
+\end{frame}
 		
 \subsection{Problem 4: Eigenfaces}
 
-		\begin{frame}[t]{\subsecname}
-			\begin{overprint}
-			\onslide<1>
-			\emph{P8:34 shows some examples of local features. Please try to define the geometry features based on the woman's face image (refer to P8:34) and give the number of features.}
-				\onslide<2> \inpdfc{8}{34} 
-				\small{The proportions of different length of line segments can be defined as features. And twenty one geometrical features are used.}\qed
-			\end{overprint}
-		\end{frame}   
+\begin{frame}[t]{\subsecname}
+	\begin{overprint}
+	\onslide<1>
+	\emph{P8:34 shows some examples of local features. Please try to define the geometry features based on the woman's face image (refer to P8:34) and give the number of features.}
+		\onslide<2> \inpdfc{8}{34} 
+		\small{The proportions of different length of line segments can be defined as features. And \alert{twenty one} geometrical features are used.}\qed
+	\end{overprint}
+\end{frame}   
 
 
 \begin{frame}<handout:0>[c]{Q \& A}
